-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11, 16, 17
-
Component/s: hotspot
-
b01
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8258063 | 16 | Douglas Simon | P2 | Resolved | Fixed | b29 |
| JDK-8259689 | 11.0.11-oracle | Dukebot | P2 | Closed | Fixed | b02 |
Following tests failed after JDK-8257917
```
compiler/aot/calls/fromAot/AotInvokeInterface2InterpretedTest.java
compiler/aot/calls/fromAot/AotInvokeDynamic2NativeTest.java
compiler/aot/calls/fromAot/AotInvokeDynamic2InterpretedTest.java
compiler/aot/calls/fromAot/AotInvokeSpecial2NativeTest.java
compiler/aot/calls/fromAot/AotInvokeDynamic2CompiledTest.java
compiler/aot/calls/fromAot/AotInvokeStatic2CompiledTest.java
compiler/aot/calls/fromAot/AotInvokeDynamic2AotTest.java
compiler/aot/calls/fromAot/AotInvokeInterface2NativeTest.java
compiler/aot/calls/fromAot/AotInvokeStatic2AotTest.java
compiler/aot/calls/fromAot/AotInvokeInterface2CompiledTest.java
compiler/aot/calls/fromAot/AotInvokeSpecial2CompiledTest.java
compiler/aot/calls/fromAot/AotInvokeInterface2AotTest.java
compiler/aot/calls/fromAot/AotInvokeSpecial2AotTest.java
compiler/aot/calls/fromAot/AotInvokeSpecial2InterpretedTest.java
compiler/aot/calls/fromAot/AotInvokeStatic2InterpretedTest.java
compiler/aot/calls/fromAot/AotInvokeStatic2NativeTest.java
compiler/aot/calls/fromAot/AotInvokeVirtual2AotTest.java
compiler/aot/calls/fromAot/AotInvokeVirtual2CompiledTest.java
compiler/aot/calls/fromAot/AotInvokeVirtual2InterpretedTest.java
compiler/aot/calls/fromCompiled/CompiledInvokeDynamic2AotTest.java
compiler/aot/calls/fromCompiled/CompiledInvokeInterface2AotTest.java
compiler/aot/calls/fromAot/AotInvokeVirtual2NativeTest.java
compiler/aot/calls/fromCompiled/CompiledInvokeStatic2AotTest.java
compiler/aot/calls/fromCompiled/CompiledInvokeSpecial2AotTest.java
compiler/aot/calls/fromCompiled/CompiledInvokeVirtual2AotTest.java
compiler/aot/calls/fromInterpreted/InterpretedInvokeDynamic2AotTest.java
compiler/aot/calls/fromInterpreted/InterpretedInvokeStatic2AotTest.java
compiler/aot/calls/fromInterpreted/InterpretedInvokeSpecial2AotTest.java
compiler/aot/calls/fromInterpreted/InterpretedInvokeInterface2AotTest.java
compiler/aot/calls/fromInterpreted/InterpretedInvokeVirtual2AotTest.java
compiler/aot/calls/fromNative/NativeInvokeSpecial2AotTest.java
compiler/aot/calls/fromNative/NativeInvokeStatic2AotTest.java
compiler/aot/calls/fromNative/NativeInvokeVirtual2AotTest.java
compiler/aot/cli/jaotc/AtFileTest.java
compiler/aot/cli/jaotc/CompileAbsoluteDirectoryTest.java
compiler/aot/cli/jaotc/CompileClassTest.java
compiler/aot/cli/jaotc/CompileClassWithDebugTest.java
compiler/aot/cli/jaotc/CompileDirectoryTest.java
compiler/aot/cli/jaotc/CompileJarTest.java
```
```
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/root/jdk/src/hotspot/share/runtime/thread.cpp:795), pid=775346, tid=775349
# assert(false) failed: Possible safepoint reached by thread that does not allow it
#
# JRE version: OpenJDK Runtime Environment (16.0+4) (fastdebug build 16-internal+4-adhoc.root.jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 16-internal+4-adhoc.root.jdk, mixed mode, aot, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x180c9e6] Thread::check_for_valid_safepoint_state()+0x106
#
--------------- T H R E A D ---------------
Current thread (0x00007f7320026b90): JavaThread "main" [_thread_in_vm, id=128173, stack(0x00007f732af11000,0x00007f732b012000)]
Stack: [0x00007f732af11000,0x00007f732b012000], sp=0x00007f732b0106f0, free space=1021k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x180c7e6] Thread::check_for_valid_safepoint_state()+0x106
V [libjvm.so+0x17a0c1e] ObjectLocker::ObjectLocker(Handle, Thread*, bool)+0x2e
V [libjvm.so+0xd529aa] InstanceKlass::link_class_impl(Thread*)+0x1ba
V [libjvm.so+0xd53993] InstanceKlass::initialize_impl(Thread*)+0x43
V [libjvm.so+0xf58994] JVMCI::ensure_box_caches_initialized(Thread*)+0x164
V [libjvm.so+0x58e62b] AOTLoader::initialize_box_caches(Thread*)+0x5b
V [libjvm.so+0x1818039] Threads::initialize_java_lang_classes(JavaThread*, Thread*)+0xba9
V [libjvm.so+0x1818b3d] Threads::create_vm(JavaVMInitArgs*, bool*)+0x43d
V [libjvm.so+0xed0a79] JNI_CreateJavaVM+0x99
C [libjli.so+0x75ba] JavaMain+0x8a
C [libjli.so+0xae99] ThreadJavaMain+0x9
```
```
compiler/aot/calls/fromAot/AotInvokeInterface2InterpretedTest.java
compiler/aot/calls/fromAot/AotInvokeDynamic2NativeTest.java
compiler/aot/calls/fromAot/AotInvokeDynamic2InterpretedTest.java
compiler/aot/calls/fromAot/AotInvokeSpecial2NativeTest.java
compiler/aot/calls/fromAot/AotInvokeDynamic2CompiledTest.java
compiler/aot/calls/fromAot/AotInvokeStatic2CompiledTest.java
compiler/aot/calls/fromAot/AotInvokeDynamic2AotTest.java
compiler/aot/calls/fromAot/AotInvokeInterface2NativeTest.java
compiler/aot/calls/fromAot/AotInvokeStatic2AotTest.java
compiler/aot/calls/fromAot/AotInvokeInterface2CompiledTest.java
compiler/aot/calls/fromAot/AotInvokeSpecial2CompiledTest.java
compiler/aot/calls/fromAot/AotInvokeInterface2AotTest.java
compiler/aot/calls/fromAot/AotInvokeSpecial2AotTest.java
compiler/aot/calls/fromAot/AotInvokeSpecial2InterpretedTest.java
compiler/aot/calls/fromAot/AotInvokeStatic2InterpretedTest.java
compiler/aot/calls/fromAot/AotInvokeStatic2NativeTest.java
compiler/aot/calls/fromAot/AotInvokeVirtual2AotTest.java
compiler/aot/calls/fromAot/AotInvokeVirtual2CompiledTest.java
compiler/aot/calls/fromAot/AotInvokeVirtual2InterpretedTest.java
compiler/aot/calls/fromCompiled/CompiledInvokeDynamic2AotTest.java
compiler/aot/calls/fromCompiled/CompiledInvokeInterface2AotTest.java
compiler/aot/calls/fromAot/AotInvokeVirtual2NativeTest.java
compiler/aot/calls/fromCompiled/CompiledInvokeStatic2AotTest.java
compiler/aot/calls/fromCompiled/CompiledInvokeSpecial2AotTest.java
compiler/aot/calls/fromCompiled/CompiledInvokeVirtual2AotTest.java
compiler/aot/calls/fromInterpreted/InterpretedInvokeDynamic2AotTest.java
compiler/aot/calls/fromInterpreted/InterpretedInvokeStatic2AotTest.java
compiler/aot/calls/fromInterpreted/InterpretedInvokeSpecial2AotTest.java
compiler/aot/calls/fromInterpreted/InterpretedInvokeInterface2AotTest.java
compiler/aot/calls/fromInterpreted/InterpretedInvokeVirtual2AotTest.java
compiler/aot/calls/fromNative/NativeInvokeSpecial2AotTest.java
compiler/aot/calls/fromNative/NativeInvokeStatic2AotTest.java
compiler/aot/calls/fromNative/NativeInvokeVirtual2AotTest.java
compiler/aot/cli/jaotc/AtFileTest.java
compiler/aot/cli/jaotc/CompileAbsoluteDirectoryTest.java
compiler/aot/cli/jaotc/CompileClassTest.java
compiler/aot/cli/jaotc/CompileClassWithDebugTest.java
compiler/aot/cli/jaotc/CompileDirectoryTest.java
compiler/aot/cli/jaotc/CompileJarTest.java
```
```
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/root/jdk/src/hotspot/share/runtime/thread.cpp:795), pid=775346, tid=775349
# assert(false) failed: Possible safepoint reached by thread that does not allow it
#
# JRE version: OpenJDK Runtime Environment (16.0+4) (fastdebug build 16-internal+4-adhoc.root.jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 16-internal+4-adhoc.root.jdk, mixed mode, aot, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x180c9e6] Thread::check_for_valid_safepoint_state()+0x106
#
--------------- T H R E A D ---------------
Current thread (0x00007f7320026b90): JavaThread "main" [_thread_in_vm, id=128173, stack(0x00007f732af11000,0x00007f732b012000)]
Stack: [0x00007f732af11000,0x00007f732b012000], sp=0x00007f732b0106f0, free space=1021k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x180c7e6] Thread::check_for_valid_safepoint_state()+0x106
V [libjvm.so+0x17a0c1e] ObjectLocker::ObjectLocker(Handle, Thread*, bool)+0x2e
V [libjvm.so+0xd529aa] InstanceKlass::link_class_impl(Thread*)+0x1ba
V [libjvm.so+0xd53993] InstanceKlass::initialize_impl(Thread*)+0x43
V [libjvm.so+0xf58994] JVMCI::ensure_box_caches_initialized(Thread*)+0x164
V [libjvm.so+0x58e62b] AOTLoader::initialize_box_caches(Thread*)+0x5b
V [libjvm.so+0x1818039] Threads::initialize_java_lang_classes(JavaThread*, Thread*)+0xba9
V [libjvm.so+0x1818b3d] Threads::create_vm(JavaVMInitArgs*, bool*)+0x43d
V [libjvm.so+0xed0a79] JNI_CreateJavaVM+0x99
C [libjli.so+0x75ba] JavaMain+0x8a
C [libjli.so+0xae99] ThreadJavaMain+0x9
```
- backported by
-
JDK-8258063 [JVMCI] JVMCI_lock shouldn't be held while initializing box classes
-
- Resolved
-
-
JDK-8259689 [JVMCI] JVMCI_lock shouldn't be held while initializing box classes
-
- Closed
-
- relates to
-
JDK-8257917 [JVMCI] crash when materializing boxed values under -Xcomp
-
- Resolved
-
- links to
-
Commit
openjdk/jdk16/fa77008f
-
Commit
openjdk/jdk/d163c6fe
-
Review
openjdk/jdk16/1
-
Review
openjdk/jdk/1727
-
Review
openjdk/jdk/1730
(3 links to)