8258015: [JVMCI] JVMCI_lock shouldn't be held while initializing box classes